testsuite/vhdl/parser_rules/test_data/integer_failure/integer_failure_001.expected
in file integer_failure/integer_failure_001.input, line 1:
parse error: Test Suite Full Match Error! Unparsed input left!
 42_
   ^
